--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Sample App</title>
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+    <!--<link href="./src/base.css" rel="stylesheet">-->
   </head>
   <body>
     <div id='root'>
